--- a/src/pages/posts/11-08-22.md
+++ b/src/pages/posts/11-08-22.md
@@ -1,13 +1,18 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: 11-08-22
+date: 11-08-2022
+excerpt: This is a personal site/blog built with Astro 🚀
 ---
 
 # 11-08-22
 
 Hello, everyone.
 
-This is your first markdown page. It probably isn't styled much, although
-Markdown does support **bold** and _italics._
+This is a personal site/blog built with [Astro](https://astro.build) 🚀
 
-To learn more about adding a layout to your page, read the next section on **Markdown Layouts.**
+This could be a collection of random thoughts and ideas or mostly process in building side projects in anything from Typescript to Rust 🦀.
+
+Or could be nothing because I struggle to keep ideas or find the time to keep posting.
+
+Anything is possible.
