--- a/src/pages/posts/12-08-22.md
+++ b/src/pages/posts/12-08-22.md
@@ -18,4 +18,5 @@ I could just dump a bunch of stuff here and pretend like it'll be different and 
 ## Also things to do on this brand new site:
 - Make the light mode toggle stateful between pages and sessions (although maybe it's punishment for being a light mode user).
 - Add a random dock/launcher thing at the bottom that looks really cool even though I have no idea what to use it for.
-- Add a command palette in the same vein as the dock above
+- Add a command palette in the same vein as the dock above.
+- Find the best way to resort the array of markdown files I get back by date (add frontmatter date property and sort array before map?)/
