Blog: Post updates

--- a/src/pages/posts/11-08-22.md
+++ b/src/pages/posts/11-08-22.md
@@ -2,17 +2,24 @@
 layout: ../../layouts/PostLayout.astro
 title: 11-08-22
 date: 11-08-2022
-excerpt: This is a personal site/blog built with Astro 🚀
+excerpt: What is this? I'm not sure - but it's powered by Astro 🚀
 ---
 
 # 11-08-22
 
 Hello, everyone.
 
-This is a personal site/blog built with [Astro](https://astro.build) 🚀
+This is my personal site I have recently re-built from Next.js to [Astro](https://astro.build) 🚀
 
-This could be a collection of random thoughts and ideas or mostly process in building side projects in anything from Typescript to Rust 🦀.
+This is intended to be a collection of random ideas and things I find interesting or the process in building side projects in anything from Typescript to Rust 🦀. 
 
-Or could be nothing because I struggle to keep ideas or find the time to keep posting.
+But mainly as a very ridiculous and impractical solution to a simple, simple concept of a notepad for myself to remember my thoughts and ideas.
 
-Anything is possible.
+Or it could be nothing because I struggle to find the time or a way to remember to use this.
+
+## Quick thoughts on Astro
+- Tooling is fantastic including the create-astro CLI and the file structure and in-built router
+- From the entire site being __245kb__ with Next.js (*no this site had no reason to be that big ever*) - to __under 38kb__
+- Documentation is great; community sourced info and packages outside of it much more difficult to google (*"how to X astro build?"* or *how to X astro js?* because astro by itself never works)
+- Super easy to get started and the markdown intergration is so beyond simple vs something like Next & MDX it's incredible
+- Scoped component styling is really great, wish SCSS was supporting within the style tag (mainly missing nesting). Possibly some better styling solutions for this as I look into it more
