Blog Posts + Spelling Fixes

--- a/src/pages/posts/11-08-22.md
+++ b/src/pages/posts/11-08-22.md
@@ -21,5 +21,5 @@ Or it could be nothing because I struggle to find the time or a way to remember 
 - Tooling is fantastic including the create-astro CLI and the file structure and in-built router
 - From the entire site being __245kb__ with Next.js (*no this site had no reason to be that big ever*) - to __under 38kb__
 - Documentation is great; community sourced info and packages outside of it much more difficult to google (*"how to X astro build?"* or *how to X astro js?* because astro by itself never works)
-- Super easy to get started and the markdown intergration is so beyond simple vs something like Next & MDX it's incredible
+- Super easy to get started and the markdown integration is so beyond simple vs something like Next & MDX it's incredible
 - Scoped component styling is really great, wish SCSS was supporting within the style tag (mainly missing nesting). Possibly some better styling solutions for this as I look into it more
