Missing sentence on post

--- a/src/pages/posts/13-08-22.md
+++ b/src/pages/posts/13-08-22.md
@@ -13,7 +13,7 @@ This is also partially due to the ecosystem being so young that there's not a wh
 
 ## Today I started playing with Axum. 
 
-So far it's API has been great! And I like that it's created and backed by the creators of tokio.rs the main rust asynchronous 
+So far it's API has been great! And I like that it's created and backed by the creators of tokio.rs rust's main asynchronous runtime. 
 
 However my one frustration is the get started example doesn't compile without ensuring your project (Cargo.toml) has the right dependencies and right features added to those dependencies which are not listed on the example. 
 
