Date frontmatter format

--- a/src/pages/posts/13-08-22.md
+++ b/src/pages/posts/13-08-22.md
@@ -1,8 +1,8 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: 13-08-22
-date: 13-08-2022
-excerpt: Rust frameworks for web servers 🦀
+date: 2022-08-13
+excerpt: Exploring the world of rust web frameworks 🦀
 ---
 
 # 13-08-22
