--- a/src/pages/posts/12-08-22.md
+++ b/src/pages/posts/12-08-22.md
@@ -2,21 +2,21 @@
 layout: ../../layouts/PostLayout.astro
 title: 12-08-22
 date: 2022-08-12
-excerpt: Initial thoughts on how to use these posts. 🤔
+excerpt: Initial thoughts on how to use these posts.
 ---
 
 # 12-08-22
 
-I see a lot of pieces of content or interesting tools and projects literally *every single* day on the internet.
+I see a lot of pieces of great content or interesting tools and projects every single day on the internet. However I've never found a way that works for me to bookmark it and come back to it.
 
 I have tried to use extensions like TabStash or OneTab to keep my habit of __1,000,000__ tabs open in check but I never go back to them or forget they are there in the moment.
 
 Or sometimes it's like, "I think I really need this tab to reference in the next 20 minutes so stashing it is pointless" but in realty I could reopen it if I do reference it and over 75% of the time I don't.
 
-I could just dump a bunch of stuff here and pretend like it'll be different and I am not the problem.
+So my thinking is that I could instead just dump a bunch of stuff here and pretend like it'll better than much, much simpler and reasonable solutions.
 
 ## Also insignificant things to do on this site that'll I'll forget if I don't write them down:
-- Find the best way to resort the array of markdown files I get back by date (add frontmatter date property and sort array before map?)
-- Make the light mode toggle stateful between pages and sessions (although maybe it's light mode users, who cares?).
+- Sort these posts by date. I only just realised it's ordered back-the-front.
+- Make the light mode toggle stateful between pages and sessions (although it is *only* light mode users, so no devs right? 🙃).
 - Add a random dock/launcher thing at the bottom that looks really cool even though I have no idea what to use it for.
 - Add a command palette in the same vein as the dock above.
