--- a/src/pages/posts/13-08-22.md
+++ b/src/pages/posts/13-08-22.md
@@ -2,14 +2,14 @@
 layout: ../../layouts/PostLayout.astro
 title: 13-08-22
 date: 2022-08-13
-excerpt: Exploring the world of rust web frameworks 🦀
+excerpt: Exploring the world of rust web frameworks.
 ---
 
 # 13-08-22
 
-In my process of learning rust I have purposely tried to stick to building projects in new areas I don't often (or haven't) experience in Typescript/JS. Therefore I haven't played with any web frameworks until now as it felt too familiar.
+In my process of learning rust I have purposely tried to stick to building projects in new areas I don't often (or haven't) experience in Typescript/JS. Therefore I haven't played with any web frameworks until now, as it felt too familiar.
 
-This is also partially due to the ecosystem being so young that there's not a whole lot of consensus on what to get started with. Google "rust web framework" and you'll read everything from the Actix Web saga to one of the other most popular frameworks possibly being abandoned.
+Also partially due to the ecosystem being so new that there's not a whole lot of consensus on what to get started with. Google "rust web framework" and you'll read everything from the Actix Web drama to one of the other most popular frameworks being abandoned (until now?).
 
 ## Today I started playing with Axum. 
 
