--- a/src/pages/posts/11-08-22.md
+++ b/src/pages/posts/11-08-22.md
@@ -2,7 +2,7 @@
 layout: ../../layouts/PostLayout.astro
 title: 11-08-22
 date: 2022-08-11
-excerpt: What is this? I'm not sure - but it's powered by Astro 🚀
+excerpt: What is this? I'm not sure - but it's powered by Astro.build.
 ---
 
 # 11-08-22
