--- a/src/pages/posts/14-08-22.md
+++ b/src/pages/posts/14-08-22.md
@@ -6,7 +6,7 @@ excerpt: The new react docs are really, really good.
 ---
 
 # 14-08-22
-Even though I really had no need too, I read through all of the new beta React docs.
+I read through all of the new beta React docs.
 
 And I know this really isn't news to anyone who has seen them. And initially I had skimmed over them and thought they were good, but they're even better than I thought.
 
