--- a/src/pages/posts/15-08-22.md
+++ b/src/pages/posts/15-08-22.md
@@ -2,14 +2,14 @@
 layout: ../../layouts/PostLayout.astro
 title: 15-08-22
 date: 2022-08-15
-excerpt: Weekly Content Log [01]
+excerpt: Weekly content roundup.
 ---
 
 # 15-08-22
 ### The best video I've seen in the last week
 [Jake Archibald on the JavaScript Event Loop](https://www.youtube.com/watch?v=cCOL7MC4Pl0)
 
-Really such a great way of explaining and visualizing the JavaScript event loop even touching on microtasks and how and when they execute.
+Really such a great way of explaining and visualizing the JavaScript event loop even down to microtasks and how and when they execute.
 
 ### Some other things I found interesting
 - [JavaScript’s Newest Framework: Bun. Will It Take Node’s Crown?](https://semaphoreci.com/blog/javascript-bun) - One of the best articles I've read regarding the state of Bun
