Fixed link in markdown

--- a/src/pages/posts/16-08-22.md
+++ b/src/pages/posts/16-08-22.md
@@ -23,4 +23,4 @@ My other frustrating issue I found is with . Their "get current playing track" e
 
 As annoying as these bugs have been, all the APIs and platforms have been super fun to play around with and experiment.
 
-Now you can see what I'm listening too, just down there! ⤵️ Also idea comes from (@leeerob)[https://twitter.com/leeerob] - thank you to him and his helpful blog post on using the Spotify API for this purpose.
+Now you can see what I'm listening too, just down there! ⤵️ Also idea comes from [@leeerob](https://twitter.com/leeerob) - thank you to him and his helpful blog post on using the Spotify API for this purpose.
