--- a/src/pages/posts/17-08-22.md
+++ b/src/pages/posts/17-08-22.md
@@ -2,7 +2,7 @@
 layout: ../../layouts/PostLayout.astro
 title: 17-08-22
 date: 2022-08-17
-excerpt: Things to update on this site...
+excerpt: Things that need fixing on this site.
 ---
 
 # 17-08-22
@@ -16,4 +16,4 @@ Today when playing a song with a rather unique title, the Now Playing component 
 
 ### My fonts are missing
 
-This must have happened at some point during my [SSR & deploying to the edge ordeal yesterday.](https://joshgermon.me/posts/16-08-22.md) I did remove the Astro font optimisation and add it back, so somewhere along the way it must've not been intergrated back correctly.
+This must have happened at some point during my [SSR & deploying to the edge ordeal yesterday.](https://joshgermon.me/posts/16-08-22) I did remove the Astro font optimisation and add it back, so somewhere along the way it must've not been intergrated back correctly.
