Adjustment to post content

--- a/src/pages/posts/22-08-22.md
+++ b/src/pages/posts/22-08-22.md
@@ -1,8 +1,8 @@
 ---
 layout: ../../layouts/PostLayout.astro
-title: 21-08-22
-date: 2022-08-21
-excerpt: Adblock and consent to track.
+title: 22-08-22
+date: 2022-08-22
+excerpt: Weekly content roundup.
 ---
 
 # 22-08-22
