--- a/src/pages/posts/21-08-22.md
+++ b/src/pages/posts/21-08-22.md
@@ -2,7 +2,7 @@
 layout: ../../layouts/PostLayout.astro
 title: 21-08-22
 date: 2022-08-21
-excerpt: Adblock and consent to track.
+excerpt: Adblock and respecting users consent to track.
 ---
 
 # 21-08-22
