--- a/src/pages/posts/23-08-22.md
+++ b/src/pages/posts/23-08-22.md
@@ -13,3 +13,5 @@ I was looking through different crates the other day and suggestions on r/rust f
 Then I found [Are we Game Yet?](https://arewegameyet.rs/).
 
 And then [Are we Web Yet?](https://www.arewewebyet.org/) which may have actually been the original.
+
+They are all actually super helpful.
