Added puncuation to excerpt

--- a/src/pages/posts/25-08-22.md
+++ b/src/pages/posts/25-08-22.md
@@ -2,7 +2,7 @@
 layout: ../../layouts/PostLayout.astro
 title: 25-08-22
 date: 2022-08-25
-excerpt: The one super important feature Backblaze B2 is missing
+excerpt: The one super important feature Backblaze B2 is missing.
 ---
 
 # 25-08-22
