--- a/src/pages/posts/26-08-22.md
+++ b/src/pages/posts/26-08-22.md
@@ -6,7 +6,7 @@ excerpt: Why is there no emmet support for CSS Modules?
 ---
 
 # 26-08-22
-## I really want emmet to work with CSS Modules and it bothers me it doesn't.
+## I really want emmet to support CSS Modules and it bothers me it doesn't.
 
 I just want to be able to write `.class-name` and have it auto complete to `<div className={styles['class-name']}></div>`. Not having to always delete the auto quotes added everytime.
     
