--- a/src/pages/posts/28-08-22.md
+++ b/src/pages/posts/28-08-22.md
@@ -2,7 +2,7 @@
 layout: ../../layouts/PostLayout.astro
 title: 28-08-22
 date: 2022-08-28
-excerpt: Serverless thoughts.
+excerpt: Serverless function payloads.
 ---
 
 # 28-08-22
