--- a/src/pages/posts/28-08-22.md
+++ b/src/pages/posts/28-08-22.md
@@ -6,7 +6,7 @@ excerpt: Serverless function payloads.
 ---
 
 # 28-08-22
-## Serverless is great for so many reasons however it's not without it's complications.
+## Serverless limitations.
 
 The one frustrating limitation I've run into a couple of times is the payload limit for each serverless function request.
 
